<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>web_app</groupId>
  <artifactId>web_app</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>war</packaging>
  <name>web_app</name>
  <description>web_app</description>
  
 	<properties>
		<java.version>1.8</java.version>
	</properties>
  
	<dependencies>	
	<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
	<dependency>  
		    <groupId>org.postgresql</groupId>
    		<artifactId>postgresql</artifactId>
    		<version>42.2.5</version>
	</dependency>  
	
	<!-- for use jsp code in html page -->
	  <dependency>
            <groupId>jstl</groupId>
            <artifactId>jstl</artifactId>
            <version>1.2</version>
      </dependency>
	
	<!-- jsp use servlet lib for tags -->
	<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.1.0</version>
            <scope>provided</scope>
        </dependency>
 <dependency>
    <groupId>javax.servlet</groupId>
    <artifactId>servlet-api</artifactId>
    <version>2.5</version>
</dependency>
        
        
	
	<!-- jsp tags use this lib for tags -->
        <!-- https://mvnrepository.com/artifact/taglibs/standard -->
        <dependency>
            <groupId>taglibs</groupId>
            <artifactId>standard</artifactId>
            <version>1.1.2</version>
        </dependency>
        
<!-- for Excel work -->        
		<dependency>
		        <groupId>org.apache.poi</groupId>
		        <artifactId>poi</artifactId>
		        <version>3.11</version>
		</dependency>        
	
	</dependencies>	
  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.2.1</version>
        <configuration>
          <warSourceDirectory>WebContent</warSourceDirectory>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>